--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 MONGO_URI= mongodb://localhost:27017/travel-agency-backend
+# MONGO_URI= mongodb+srv://nameerfarooquit:12ezqFeIXnM8u4gH@cluster0.k2lra.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=abcd
